--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <!-- Nama Pasangan Tanpa Foto -->
                 <div class="row align-items-center justify-content-center mt-5">
                     <div class="col-lg-4 mt-3 ">
-                        <h2 class="display-4 text-primary mb-0" style="">Fanny Woisir</h2>
+                        <h2 class="display-4 text-primary mb-0" style="">Fanny Woisiri</h2>
                         <p class="text-muted ">Putri dari Bapak ... & Ibu ...</p>
                     </div>
 
