--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
     <!-- Main Content -->
     <div id="main-content" class="d-none">
         <!-- Navbar minimal -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent position-absolute w-100" style="z-index: 999;">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent position-absolute w-100 d-none" style="z-index: 999;">
+            <div class="container text-center">
                 <a class="navbar-brand text-primary fw-bold" href="#">Sam & Fanny</a>
             </div>
         </nav>
