--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dashboard Undangan Sam & Fanny</title>
+    <title>Dashboard Undangan Sam & Tifanny</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
@@ -17,19 +17,19 @@
 
 
     <meta name="description"
-        content="Tanpa mengurangi rasa hormat, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara Peminangan Sam & Fanny. Simak informasi lengkap acara melalui undangan digital ini.">
-    <meta name="keywords" content="Undangan Peminangan, Sam dan Fanny, Engagement Invitation">
+        content="Tanpa mengurangi rasa hormat, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara Peminangan Sam & Tifanny. Simak informasi lengkap acara melalui undangan digital ini.">
+    <meta name="keywords" content="Undangan Peminangan, Sam dan Tifanny, Engagement Invitation">
     <meta name="author" content="SB">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sam-fanny.projectbos.web.id/">
-    <meta property="og:title" content="Sam & Fanny - Undangan Peminangan">
+    <meta property="og:url" content="https://sam-Tifanny.projectbos.web.id/">
+    <meta property="og:title" content="Sam & Tifanny - Undangan Peminangan">
     <meta property="og:description"
         content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami. Klik untuk melihat detail acara.">
     <meta property="og:image" content="img/logo.png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://sam-fanny.projectbos.web.id/">
-    <meta property="twitter:title" content="Sam & Fanny - Undangan Peminangan">
+    <meta property="twitter:url" content="https://sam-Tifanny.projectbos.web.id/">
+    <meta property="twitter:title" content="Sam & Tifanny - Undangan Peminangan">
     <meta property="twitter:description" content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami.">
     <meta property="twitter:image" content="img/logo.png">
     <style>
@@ -100,7 +100,7 @@
 <body>
     <div class="header">
         <h1 class="display-4">Dashboard Undangan</h1>
-        <p class="lead">Sam <i class="fa fa-heart mx-2"></i> Fanny • 27 Desember 2025</p>
+        <p class="lead">Sam <i class="fa fa-heart mx-2"></i> Tifanny • 27 Desember 2025</p>
     </div>
 
     <div class="container my-5">
@@ -209,7 +209,7 @@ Dengan sukacita dan penuh ucapan syukur kepada Tuhan Yesus Kristus, kami mengund
 
 Samuel Simbiak  
 &  
-Fanny Woisir
+Tifanny Woisir
 
 🗓️ Sabtu, 27 Desember 2025  
 🕤 Pukul 09.00 WIT  
@@ -222,7 +222,7 @@ Kehadiran serta doa restu sangat berarti bagi kami.
 Terima kasih dan Tuhan memberkati.
 
 Hormat kami,  
-Keluarga Samuel & Fanny`;
+Keluarga Samuel & Tifanny`;
 
             document.getElementById('template2').textContent =
                 `Shalom dalam kasih Tuhan Yesus Kristus, ${guestName} yang dikasihi Tuhan,
@@ -231,7 +231,7 @@ Dengan hati penuh ucapan syukur kepada Allah Bapa, kami mengundang Bapak/Ibu/Sau
 
 Samuel Simbiak  
 dengan  
-Fanny Woisir
+Tifanny Woisir
 
 🗓️ Sabtu, 27 Desember 2025  
 🕤 09.00 WIT  
@@ -245,12 +245,12 @@ Kehadiran dan doa restu Bapak/Ibu menjadi anugerah besar bagi kami.
 Terima kasih banyak dan Tuhan Yesus memberkati selalu.
 
 Salam kasih,  
-Keluarga Samuel & Fanny`;
+Keluarga Samuel & Tifanny`;
 
             document.getElementById('template3').textContent =
                 `Shalom ${guestName}! 😊
 
-Kabar gembira! Sam & Fanny akan mengadakan acara peminangan 🎉
+Kabar gembira! Sam & Tifanny akan mengadakan acara peminangan 🎉
 
 🗓️ Sabtu, 27 Desember 2025  
 🕘 09.00 WIT  
@@ -263,7 +263,7 @@ ${currentLink}
 
 Datangnya jadi berkat banget! Terima kasih dan Tuhan Yesus memberkati 🙏
 
-Sam & Fanny`;
+Sam & Tifanny`;
 
             document.getElementById('template4').textContent =
                 `Shalom dalam nama Tuhan Yesus Kristus,
@@ -274,7 +274,7 @@ Dengan rendah hati kami mohon kehadiran serta doa restu pada acara peminangan:
 
 Samuel Simbiak  
 dengan  
-Fanny Woisir
+Tifanny Woisir
 
 🗓️ Sabtu, 27 Desember 2025  
 🕤 09.00 WIT  
@@ -288,7 +288,7 @@ Doa dan kehadiran Bapak/Ibu menjadi berkat luar biasa.
 Tuhan Yesus memberkati pelayanan Bapak/Ibu selalu.
 
 Hormat kami,  
-Keluarga Samuel & Fanny`;
+Keluarga Samuel & Tifanny`;
         }
 
         function copyLink() {
