--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sam & Fanny - Undangan Peminangan</title>
+    <title>Sam & Tifanny - Undangan Peminangan</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,17 +24,17 @@
     <link rel="apple-touch-icon" href="img/logo.png">
 
 
-    <meta name="description" content="Tanpa mengurangi rasa hormat, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara Peminangan Sam & Fanny. Simak informasi lengkap acara melalui undangan digital ini.">
-<meta name="keywords" content="Undangan Peminangan, Sam dan Fanny, Engagement Invitation">
+    <meta name="description" content="Tanpa mengurangi rasa hormat, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara Peminangan Sam & Tifanny. Simak informasi lengkap acara melalui undangan digital ini.">
+<meta name="keywords" content="Undangan Peminangan, Sam dan Tifanny, Engagement Invitation">
 <meta name="author" content="SB">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://sam-fanny.projectbos.web.id/">
-<meta property="og:title" content="Sam & Fanny - Undangan Peminangan">
+<meta property="og:url" content="https://sam-Tifanny.projectbos.web.id/">
+<meta property="og:title" content="Sam & Tifanny - Undangan Peminangan">
 <meta property="og:description" content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami. Klik untuk melihat detail acara.">
 <meta property="og:image" content="img/logo.png"> <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://sam-fanny.projectbos.web.id/">
-<meta property="twitter:title" content="Sam & Fanny - Undangan Peminangan">
+<meta property="twitter:url" content="https://sam-Tifanny.projectbos.web.id/">
+<meta property="twitter:title" content="Sam & Tifanny - Undangan Peminangan">
 <meta property="twitter:description" content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami.">
 <meta property="twitter:image" content="img/logo.png">
 
@@ -312,7 +312,7 @@
         <img src="img/floral-top.png" class="floral-top" alt=""> <!-- Ganti dengan floral dekoratif -->
         <div class="animate__animated animate__fadeIn">
             <p class="fs-4 text-uppercase" style="letter-spacing: 5px;">The Engagement of</p>
-            <h1 class="display-1 mb-4">Sam & Fanny</h1>
+            <h1 class="display-1 mb-4">Sam & Tifanny</h1>
             <p class="fs-3">27 Desember 2025</p>
             <p class="fs-4 mt-5" id="guest-name-cover">Kepada YTH. Bapak/Ibu/Saudara/i</p>
             <button class="btn btn-primary btn-lg mt-4 px-5 py-3 animate__animated animate__bounceIn"
@@ -327,7 +327,7 @@
         <!-- Navbar minimal -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent position-absolute w-100 d-none" style="z-index: 999;">
             <div class="container text-center">
-                <a class="navbar-brand text-primary fw-bold" href="#">Sam & Fanny</a>
+                <a class="navbar-brand text-primary fw-bold" href="#">Sam & Tifanny</a>
             </div>
         </nav>
 
@@ -348,7 +348,7 @@
                 <!-- Nama Pasangan Tanpa Foto -->
                 <div class="row align-items-center justify-content-center mt-5">
                     <div class="col-lg-4 mt-3 ">
-                        <h2 class="display-4 text-primary mb-0" style="">Fanny Woisiri</h2>
+                        <h2 class="display-4 text-primary mb-0" style="">TiTifanny I. Woisiri</h2>
                         <p class="text-muted ">Putri dari Bapak ... & Ibu ...</p>
                     </div>
 
