--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <meta name="author" content="SB">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://sam-Tifanny.projectbos.web.id/">
+<meta property="og:url" content="https://sam-fanny.projectbos.web.id/">
 <meta property="og:title" content="Sam & Tifanny - Undangan Peminangan">
 <meta property="og:description" content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami. Klik untuk melihat detail acara.">
 <meta property="og:image" content="img/logo.png"> <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://sam-Tifanny.projectbos.web.id/">
+<meta property="twitter:url" content="https://sam-fanny.projectbos.web.id/">
 <meta property="twitter:title" content="Sam & Tifanny - Undangan Peminangan">
 <meta property="twitter:description" content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami.">
 <meta property="twitter:image" content="img/logo.png">
@@ -348,7 +348,7 @@
                 <!-- Nama Pasangan Tanpa Foto -->
                 <div class="row align-items-center justify-content-center mt-5">
                     <div class="col-lg-4 mt-3 ">
-                        <h2 class="display-4 text-primary mb-0" style="">TiTifanny I. Woisiri</h2>
+                        <h2 class="display-4 text-primary mb-0" style="">Tifanny I. Woisiri</h2>
                         <p class="text-muted ">Putri dari Bapak ... & Ibu ...</p>
                     </div>
 
