--- a/dashboard.html
+++ b/dashboard.html
@@ -22,13 +22,13 @@
     <meta name="author" content="SB">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sam-Tifanny.projectbos.web.id/">
+    <meta property="og:url" content="https://sam-fanny.projectbos.web.id/">
     <meta property="og:title" content="Sam & Tifanny - Undangan Peminangan">
     <meta property="og:description"
         content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami. Klik untuk melihat detail acara.">
     <meta property="og:image" content="img/logo.png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://sam-Tifanny.projectbos.web.id/">
+    <meta property="twitter:url" content="https://sam-fanny.projectbos.web.id/">
     <meta property="twitter:title" content="Sam & Tifanny - Undangan Peminangan">
     <meta property="twitter:description" content="Kami memohon doa restu serta kehadiran Anda di momen bahagia kami.">
     <meta property="twitter:image" content="img/logo.png">
