update:gallery foto, nama ortu, map location

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="row align-items-center justify-content-center mt-5">
                     <div class="col-lg-4 mt-3 ">
                         <h2 class="display-4 text-primary mb-0" style="">Tifanny I. Woisiri</h2>
-                        <p class="text-muted ">Putri dari Bapak ... & Ibu ...</p>
+                        <p class="text-muted ">Putri dari Bapak Hengky Woisiri <br> & Ibu Dorkas Rudamaga</p>
                     </div>
 
                     <div
@@ -359,7 +359,7 @@
 
                     <div class="col-lg-4 mt-3 ">
                         <h2 class="display-4 text-primary mb-0" style="">Samuel Simbiak</h2>
-                        <p class="text-muted ">Putra dari Bapak ... & Ibu ...</p>
+                        <p class="text-muted ">Putra dari Bapak Hiskia Simbiak <br> & Ibu Dolfina Maer</p>
                     </div>
                 </div>
             </div>
@@ -371,10 +371,14 @@
             <div class="container animate__animated animate__fadeInUp">
                 <h1 class="display-3 text-primary mb-5">Acara Peminangan</h1>
                 <div class="bg-white p-5 rounded shadow col-lg-6 mx-auto">
-                    <p class="fw-bold fs-5">Sabtu, 27 Desember 2025</p>
-                    <p class="fs-3">Pukul 09:00 WIT</p>
-                    <p class="fs-3">BTN Atas Tanah Hitam</p>
-                    <p class="mt-4">Merupakan kehormatan bagi kami apabila Bapak/Ibu berkenan hadir</p>
+                    <p class="fw-bold fs-5 mb-0"> 📅Sabtu, 27 Desember 2025</p>
+                    <p class="fs-5 mb-0">🕛Pukul 11:00 WIT</p>
+                    <p class="fs-5"> 📌BTN Atas Tanah Hitam</p>
+                    <div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3985.657940272537!2d140.6722684749691!3d-2.6167685973611454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMzcnMDAuNCJTIDE0MMKwNDAnMjkuNCJF!5e0!3m2!1sen!2sid!4v1766491286714!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <a href="https://maps.app.goo.gl/DYVAQbXpAXERPah57" class="btn btn-primary" target="_blank"> Lihat Lokasi</a>
+                    </div>
+                    <p class="mt-4 fw-bold fs-4">Merupakan kehormatan bagi kami apabila Bapak/Ibu berkenan hadir</p>
                 </div>
             </div>
         </section>
